Changed endpoint used by slave
